# garbage_collector

./: CMakeLists.txt  LICENSE
.cache/clangd/index/: gc.cpp.CB48D0BB3C5EA2BC.idx  gc.hpp.845671801768964E.idx  main.cpp.C1B111A55A7C938F.idx
include/: gc.hpp
src/: gc.cpp  main.cpp
